Index.html and style.css modified

--- a/index.html
+++ b/index.html
@@ -5,19 +5,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+        integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2"
+        crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a98ee9cbe5.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/TagCloud@2.2.0/dist/TagCloud.min.js"></script>
 
     <!-- <script src="https://cdn.jsdelivr.net/npm/TagCloud@2.2.0/dist/TagCloud.min.js"></script> -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+        integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- <link rel="" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"> -->
     <link rel="icon" type="image/jpeg" href="images/logo.png" sizes="16x16">
@@ -39,7 +47,8 @@
                 </div>
             </h1>
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon" style="background-color:white;"></span>
         </button>
 
@@ -79,7 +88,9 @@
                     </div>
 
                     <h3>Frontend Developer & Operations Engineer</h3>
-                    <p>I’m a Frontend Developer passionate about writing clean, efficient code and creating seamless, user-friendly web experiences. With diverse skills, a positive attitude, and experience as an Operations Engineer, I deliver high-quality,
+                    <p>I’m a Frontend Developer passionate about writing clean, efficient code and creating seamless,
+                        user-friendly web experiences. With diverse skills, a positive attitude, and experience as an
+                        Operations Engineer, I deliver high-quality,
                         modern web solutions that perform reliably in real-world environments.</p>
                     <!-- <button class="learn-more">
                         <a href="#ABOUT">
@@ -91,7 +102,9 @@
                     </button> -->
                     <!-- From Uiverse.io by Creatlydev -->
                     <a href="Pranjal Agarwal 4.0.pdf" download class="resumeBtn">
-                        <svg stroke-linejoin="round" stroke-linecap="round" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24" class="button__icon" xmlns="http://www.w3.org/2000/svg">
+                        <svg stroke-linejoin="round" stroke-linecap="round" fill="none" stroke="currentColor"
+                            stroke-width="1.5" viewBox="0 0 24 24" class="button__icon"
+                            xmlns="http://www.w3.org/2000/svg">
                             <path fill="none" d="M0 0h24v24H0z" stroke="none"></path>
                             <path d="M4 17v2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-2"></path>
                             <path d="M7 11l5 5l5 -5"></path>
@@ -151,8 +164,12 @@
                         <h1 class="aboutHeadingText"><i class="fa fa-star"></i> ABOUT ME</h1>
                     </div>
                     <h6>Hi! I'm Pranjal Agarwal</h6>
-                    <p>I’m a Frontend Developer and Operations Engineer with a background in Computer Science & Engineering. I specialize in building modern, user-focused web interfaces and ensuring smooth product operations. With hands-on project experience
-                        and participation in global tech expos like GITEX Dubai 2024, I’ve developed a strong understanding of both development and real-world implementation. I'm driven by a passion for clean design, intuitive UX, and continuous learning.
+                    <p>I’m a Frontend Developer and Operations Engineer with a background in Computer Science &
+                        Engineering. I specialize in building modern, user-focused web interfaces and ensuring smooth
+                        product operations. With hands-on project experience
+                        and participation in global tech expos like GITEX Dubai 2024, I’ve developed a strong
+                        understanding of both development and real-world implementation. I'm driven by a passion for
+                        clean design, intuitive UX, and continuous learning.
                     </p>
                     <div class="ani">
                         <h1>
@@ -233,7 +250,8 @@
             <div class="row">
                 <div class="col-12">
                     <div class="dobox-part row">
-                        <div class="left-part col-lg-6 col-md-12 col-sm-6 col-12" data-aos="fade-right" data-aos-duration="2000">
+                        <div class="left-part col-lg-6 col-md-12 col-sm-6 col-12" data-aos="fade-right"
+                            data-aos-duration="2000">
                             <ul>
                                 <li class="offeredServiceCards">
                                     <a href="" class="">
@@ -243,7 +261,9 @@
                                             </figure>
                                             <h5>Software development</h5>
                                         </div>
-                                        <p>I build scalable and efficient software solutions tailored to meet your needs. Using modern programming languages and frameworks, I create reliable, user-friendly applications that perform seamlessly and are easy
+                                        <p>I build scalable and efficient software solutions tailored to meet your
+                                            needs. Using modern programming languages and frameworks, I create reliable,
+                                            user-friendly applications that perform seamlessly and are easy
                                             to maintain.</p>
                                     </a>
                                 </li>
@@ -255,7 +275,9 @@
                                             </figure>
                                             <h5>Android development</h5>
                                         </div>
-                                        <p>Designing intuitive, responsive, and efficient mobile applications for Android platforms to meet your business or personal needs. User experience and functionality are my priorities.</p>
+                                        <p>Designing intuitive, responsive, and efficient mobile applications for
+                                            Android platforms to meet your business or personal needs. User experience
+                                            and functionality are my priorities.</p>
                                     </a>
                                 </li>
                                 <li class="offeredServiceCards">
@@ -266,7 +288,9 @@
                                             </figure>
                                             <h5>Web development</h5>
                                         </div>
-                                        <p>I create responsive, dynamic websites with a focus on UI/UX. By leveraging the latest frontend technologies, I ensure your website looks great, performs well, and provides an intuitive user experience across all
+                                        <p>I create responsive, dynamic websites with a focus on UI/UX. By leveraging
+                                            the latest frontend technologies, I ensure your website looks great,
+                                            performs well, and provides an intuitive user experience across all
                                             devices. </p>
                                     </a>
                                 </li>
@@ -278,7 +302,9 @@
                                             </figure>
                                             <h5>Business Representation</h5>
                                         </div>
-                                        <p>Representing organizations at international exhibitions like GITEX and UP International Expo. Engaging with clients to understand their needs, discuss solutions, and promote products effectively.</p>
+                                        <p>Representing organizations at international exhibitions like GITEX and UP
+                                            International Expo. Engaging with clients to understand their needs, discuss
+                                            solutions, and promote products effectively.</p>
                                     </a>
                                 </li>
                             </ul>
@@ -288,10 +314,16 @@
                                 <span></span> What I do
                             </h3>
                             <h2 class="serviceTitle mb-mb-5 mb-3">I Link the Dots From Design to Development</h2>
-                            <p class="serviceContent"> As a dedicated and passionate developer, I specialize in transforming ideas into reality, delivering seamless web and mobile solutions. With expertise in frontend development and UI/UX design, I create responsive and dynamic
+                            <p class="serviceContent"> As a dedicated and passionate developer, I specialize in
+                                transforming ideas into reality, delivering seamless web and mobile solutions. With
+                                expertise in frontend development and UI/UX design, I create responsive and dynamic
                                 user experiences that not only look great but also function flawlessly.</p>
-                            <p class="serviceContent"> I’m committed to providing high-quality solutions for your web, mobile, and cloud-based needs, whether it’s a sleek website, an intuitive app, or a scalable cloud system.</p>
-                            <p class="serviceContent"> With a focus on precision, user-centric design, and the latest technologies, I’m your go-to partner for bringing innovative digital products to life. Based in India, I’ve had the opportunity to work with clients globally, including
+                            <p class="serviceContent"> I’m committed to providing high-quality solutions for your web,
+                                mobile, and cloud-based needs, whether it’s a sleek website, an intuitive app, or a
+                                scalable cloud system.</p>
+                            <p class="serviceContent"> With a focus on precision, user-centric design, and the latest
+                                technologies, I’m your go-to partner for bringing innovative digital products to life.
+                                Based in India, I’ve had the opportunity to work with clients globally, including
                                 in the USA and Dubai, making sure each project is as unique as the vision behind it.
                             </p>
                         </div>
@@ -478,13 +510,16 @@
                         <div class="row">
                             <div class="footer-icon">
                                 <div class="col-1">
-                                    <a href="https://www.instagram.com/this__is_pranjal_agarwal9094/"><img src="https://img.icons8.com/fluency/30/000000/instagram-new.png" /></a>
+                                    <a href="https://www.instagram.com/this__is_pranjal_agarwal9094/"><img
+                                            src="https://img.icons8.com/fluency/30/000000/instagram-new.png" /></a>
                                 </div>
                                 <div class="col-1">
-                                    <a href="https://www.linkedin.com/in/pranjal-agarwal-8671b2195/"><img src="https://img.icons8.com/color/30/000000/linkedin.png" /></a>
+                                    <a href="https://www.linkedin.com/in/pranjal-agarwal-8671b2195/"><img
+                                            src="https://img.icons8.com/color/30/000000/linkedin.png" /></a>
                                 </div>
                                 <div class="col-1">
-                                    <a href="https://github.com/pranjal2101"><img src="https://img.icons8.com/fluency/30/000000/github.png" /></a>
+                                    <a href="https://github.com/pranjal2101"><img
+                                            src="https://img.icons8.com/fluency/30/000000/github.png" /></a>
                                 </div>
                             </div>
                         </div>
@@ -508,7 +543,7 @@
 
         </footer>
         <div class="footer1 text5">
-            <p class="text">Creted By Pranjal Agarwal</p>
+            <p class="text">Created By Pranjal Agarwal</p>
         </div>
     </section>
 
