changes in html and css

--- a/index.html
+++ b/index.html
@@ -161,7 +161,14 @@
             <div class="row">
                 <div class="aboutMe-ab1" id="h">
                     <div class="aboutHeading">
-                        <h1 class="aboutHeadingText"><i class="fa fa-star"></i> ABOUT ME</h1>
+                        <h1 class="sectionHeadingWrapper">
+                            <svg width="20" height="20" viewBox="0 0 16 16" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M4.33454 9.58362C5.35965 9.83993 6.16007 10.6403 6.41638 11.6655L7.37875 15.5149C7.45002 15.8 7.70616 16 8 16C8.29384 16 8.54998 15.8 8.62125 15.5149L9.58362 11.6655C9.83993 10.6403 10.6403 9.83993 11.6655 9.58362L15.5149 8.62125C15.8 8.54998 16 8.29384 16 8C16 7.70616 15.8 7.45002 15.5149 7.37875L11.6655 6.41638C10.6403 6.16007 9.83993 5.35965 9.58362 4.33454L8.62125 0.485071C8.54998 0.199992 8.29384 0 8 0C7.70616 0 7.45002 0.199991 7.37875 0.485071L6.41638 4.33454C6.16007 5.35965 5.35965 6.16007 4.33454 6.41638L0.485071 7.37875C0.199992 7.45002 0 7.70616 0 8C0 8.29384 0.199991 8.54998 0.485071 8.62125L4.33454 9.58362Z"
+                                    fill="currentColor"></path>
+                            </svg> <span class="sectionHeading">ABOUT ME</span>
+                        </h1>
                     </div>
                     <h6>Hi! I'm Pranjal Agarwal</h6>
                     <p>I’m a Frontend Developer and Operations Engineer with a background in Computer Science &
@@ -244,7 +251,13 @@
         <div class="container">
             <div class="blankSpace"></div>
             <div class="serviceHeading">
-                <h1 class="serviceText"><i class="fa fa-star"></i> Service</h1>
+                <h1 class="sectionHeadingWrapper">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                            d="M4.33454 9.58362C5.35965 9.83993 6.16007 10.6403 6.41638 11.6655L7.37875 15.5149C7.45002 15.8 7.70616 16 8 16C8.29384 16 8.54998 15.8 8.62125 15.5149L9.58362 11.6655C9.83993 10.6403 10.6403 9.83993 11.6655 9.58362L15.5149 8.62125C15.8 8.54998 16 8.29384 16 8C16 7.70616 15.8 7.45002 15.5149 7.37875L11.6655 6.41638C10.6403 6.16007 9.83993 5.35965 9.58362 4.33454L8.62125 0.485071C8.54998 0.199992 8.29384 0 8 0C7.70616 0 7.45002 0.199991 7.37875 0.485071L6.41638 4.33454C6.16007 5.35965 5.35965 6.16007 4.33454 6.41638L0.485071 7.37875C0.199992 7.45002 0 7.70616 0 8C0 8.29384 0.199991 8.54998 0.485071 8.62125L4.33454 9.58362Z"
+                            fill="currentColor"></path>
+                    </svg><span class="sectionHeading">Service</span>
+                </h1>
             </div>
 
             <div class="row">
@@ -334,7 +347,13 @@
     </section>
 
     <section id="SKILLS">
-        <h1 class="ct-h1">Skills</h1>
+        <h1 class="sectionHeadingWrapper">
+            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path
+                    d="M4.33454 9.58362C5.35965 9.83993 6.16007 10.6403 6.41638 11.6655L7.37875 15.5149C7.45002 15.8 7.70616 16 8 16C8.29384 16 8.54998 15.8 8.62125 15.5149L9.58362 11.6655C9.83993 10.6403 10.6403 9.83993 11.6655 9.58362L15.5149 8.62125C15.8 8.54998 16 8.29384 16 8C16 7.70616 15.8 7.45002 15.5149 7.37875L11.6655 6.41638C10.6403 6.16007 9.83993 5.35965 9.58362 4.33454L8.62125 0.485071C8.54998 0.199992 8.29384 0 8 0C7.70616 0 7.45002 0.199991 7.37875 0.485071L6.41638 4.33454C6.16007 5.35965 5.35965 6.16007 4.33454 6.41638L0.485071 7.37875C0.199992 7.45002 0 7.70616 0 8C0 8.29384 0.199991 8.54998 0.485071 8.62125L4.33454 9.58362Z"
+                    fill="currentColor"></path>
+            </svg> <span class="sectionHeading">Skills</span>
+        </h1>
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -431,31 +450,61 @@
 
 
     <section class="contact" id="CONTACT">
-        <h1 class="ct-h1">Contact Me</h1>
+        <div class="contact-heading-wrapper">
+            <h1 class="sectionHeadingWrapper">
+                <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M4.33454 9.58362C5.35965 9.83993 6.16007 10.6403 6.41638 11.6655L7.37875 15.5149C7.45002 15.8 7.70616 16 8 16C8.29384 16 8.54998 15.8 8.62125 15.5149L9.58362 11.6655C9.83993 10.6403 10.6403 9.83993 11.6655 9.58362L15.5149 8.62125C15.8 8.54998 16 8.29384 16 8C16 7.70616 15.8 7.45002 15.5149 7.37875L11.6655 6.41638C10.6403 6.16007 9.83993 5.35965 9.58362 4.33454L8.62125 0.485071C8.54998 0.199992 8.29384 0 8 0C7.70616 0 7.45002 0.199991 7.37875 0.485071L6.41638 4.33454C6.16007 5.35965 5.35965 6.16007 4.33454 6.41638L0.485071 7.37875C0.199992 7.45002 0 7.70616 0 8C0 8.29384 0.199991 8.54998 0.485071 8.62125L4.33454 9.58362Z"
+                        fill="currentColor"></path>
+                </svg> <span class="sectionHeading">Contact Me</span>
+            </h1>
+
+        </div>
         <div class="row con-row">
             <div class="col-12 col-md-6 col-lg-6 contact-info">
-                <div class="row contact-row">
-                    <i class="fa-solid fa-user"></i>
+                <div class="row"></div>
+
+                <div class="contact-row">
+                    <div class="icon-box">
+                        <i class="fa-solid fa-user"></i>
+                    </div>
                     <div class="info">
                         <div class="head">Name</div>
-                        <div class="title">Pranjal Agarwal</div>
+                        <div class="contactInfo">Pranjal Agarwal</div>
                     </div>
                 </div>
-                <div class="row contact-row">
-                    <i class="fa-solid fa-location-dot"></i>
+
+                <div class="contact-row">
+                    <div class="icon-box">
+                        <i class="fa-solid fa-phone"></i>
+                    </div>
                     <div class="info">
-                        <div class="head">Location</div>
-                        <div class="title">Agra(282003), UP India</div>
+                        <div class="head">Phone</div>
+                        <div class="contactInfo">+91 9119066455</div>
                     </div>
                 </div>
-                <div class="row contact-row">
-                    <i class="fa-solid fa-envelope"></i>
+
+                <div class="contact-row">
+                    <div class="icon-box">
+                        <i class="fa-solid fa-envelope"></i>
+                    </div>
                     <div class="info">
                         <div class="head">Email</div>
-                        <div class="title">pranjalagarwal9094@gmail.com</div>
+                        <div class="contactInfo">pranjalagarwal9094@gmail.com</div>
+                    </div>
+                </div>
+
+                <div class="contact-row">
+                    <div class="icon-box">
+                        <i class="fa-solid fa-location-dot"></i>
+                    </div>
+                    <div class="info">
+                        <div class="head">Location</div>
+                        <div class="contactInfo">Agra(282003), UP India</div>
                     </div>
                 </div>
             </div>
+
             <div class="col-12 col-md-5 col-lg-5">
                 <div class="get-in-touch">
                     <h1 class="title">Let's Get In Touch</h1>
@@ -467,15 +516,15 @@
                             </div>
                             <div class="form-field col-lg-6">
                                 <input type="email" class="in-text" id="email">
-                                <label for="name" class="label">email</label>
+                                <label for="email" class="label">email</label>
                             </div>
                             <div class="form-field col-lg-6">
                                 <input type="text" class="in-text" id="subject">
-                                <label for="name" class="label">Subject</label>
+                                <label for="subject" class="label">Subject</label>
                             </div>
                             <div class="form-field col-lg-6">
                                 <input type="text" class="in-text" id="message">
-                                <label for="name" class="label">message</label>
+                                <label for="message" class="label">message</label>
                             </div>
                             <div class="form-field">
                                 <div class="main_div">
@@ -488,6 +537,7 @@
             </div>
         </div>
     </section>
+
 
 
     <div class="box">
